package com.android.contacts.ui.settings.screen.model

internal const val SETTINGS_ITEM_TEST_TAG_PREFIX = "settings_item_"
internal const val SETTINGS_GROUP_TEST_TAG_PREFIX = "settings_group_"
internal const val SETTINGS_SECTION_HEADER_TEST_TAG_PREFIX = "settings_section_header_"
internal const val SETTINGS_SINGLE_CHOICE_DIALOG_TEST_TAG = "settings_single_choice_dialog"
internal const val SETTINGS_SNACKBAR_TEST_TAG = "settings_snackbar"
internal const val ABOUT_BUILD_VERSION_TEST_TAG = "about_build_version"
internal const val ABOUT_LICENSES_TEST_TAG = "about_licenses"
internal const val ABOUT_LICENSES_SCREEN_TEST_TAG = "about_licenses_screen"
